📱 fix home image margin on mobile

--- a/styles/views/_home.scss
+++ b/styles/views/_home.scss
@@ -101,6 +101,10 @@
         }
 
         .avatar {
+            @media only screen and (max-width:600px) {
+                margin-top: 50px;
+            }
+
             margin-right: 1px;
 
             img {
